--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,6 +10,18 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Docker Buildx
+        id:   buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+    
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -30,12 +42,16 @@ jobs:
       - name: Build
         run:  go build -v ./...
 
-      - name: Build and push Docker image
-        id:   docker_build
+      - name: Build and push
+        id: docker_build
         uses: docker/build-push-action@v2
         with:
-          push: true
+          builder: ${{ steps.buildx.outputs.name }}
+          push: false
+          load: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{ github.event.repository.name }}:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
