--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Docker Buildx
+      - name: Set up Docker Buildxx
         id:   buildx
         uses: docker/setup-buildx-action@v1
 
